--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "AI Scrapyard",
-  "short_name": "AI Scrapyard",
+  "name": "AI 小破村",
+  "short_name": "AI 小破村",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#020617",
